--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- css -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="./css/homePageCSS.css">
+    <link rel="stylesheet" href="./css/loginCSS.css">
+
+    <!-- JS -->
+    <script src="./js/indexJS.js"></script>
 </head>
-<body>
-    heyyyyyy
+<body onload="loadHome()">
+    <!-- navigation w3 -->
+    <div class="w3-bar w3-black">
+        <a href="#" class="w3-bar-item w3-button" onclick="loadHome()">Home</a>
+        <a href="#" class="w3-bar-item w3-button" onclick="loadlogin()">Login</a>
+        <a href="#" class="w3-bar-item w3-button">About Me</a>
+      </div>
+
+    <!-- render page -->
+    <div id="renderPage">
+    </div>
+
 </body>
 </html>
