--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 
     <!-- css -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="./css/homePageCSS.css">
-    <link rel="stylesheet" href="./css/loginCSS.css">
+    <link rel="stylesheet" href="./CSS/homepageCSS.css">
+    <link rel="stylesheet" href="./CSS/loginCSS.css">
 
     <!-- JS -->
     <script src="./js/indexJS.js"></script>
@@ -19,7 +19,8 @@
     <div class="w3-bar w3-black">
         <a href="#" class="w3-bar-item w3-button" onclick="loadHome()">Home</a>
         <a href="#" class="w3-bar-item w3-button" onclick="loadlogin()">Login</a>
-        <a href="#" class="w3-bar-item w3-button">About Me</a>
+        <a href="#" class="w3-bar-item w3-button">About</a>
+        <a href="#" class="w3-bar-item w3-button">Contact</a>
       </div>
 
     <!-- render page -->
