--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
     <script src="./js/indexJS.js"></script>
 </head>
 <body onload="loadHome()">
+    <!-- logo image -->
+    <div id="logo image"> 
+        <img src="" height="50px" width="50px" alt="logo image">
+    </div>
     <!-- navigation w3 -->
     <div class="w3-bar w3-black">
         <a href="#" class="w3-bar-item w3-button" onclick="loadHome()">Home</a>
