add new pictures

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       </div>
     <!-- logo image -->
     <div id="logo image"> 
-        <img src="./CSS/Pictures/Logo.png" height="80px" width="80px" alt="logo image">
+        <img src="./CSS/Pictures/Logo.png" height="100px" width="100px" filter: invert(1) alt="logo image">
     </div>
 
     <!-- render page -->
