sign up and fix homepage logo

--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,13 @@
     <div class="w3-bar w3-black">
         <a href="#" class="w3-bar-item w3-button" onclick="loadHome()">Home</a>
         <a href="#" class="w3-bar-item w3-button" onclick="loadlogin()">Login</a>
+        <a href="#" class="w3-bar-item w3-button" onclick="loadsignup()">Sign up</a>
         <a href="#" class="w3-bar-item w3-button">About</a>
         <a href="#" class="w3-bar-item w3-button">Contact</a>
       </div>
     <!-- logo image -->
     <div id="logo image"> 
-        <img src="./CSS/Pictures/Logo.png" height="100px" width="100px" filter: invert(1) alt="logo image">
+        <img src="./CSS/Pictures/Logo.png" height="350px" width="350px" alt="logo image">
     </div>
 
     <!-- render page -->
